k8s/ddr/ddr-data-reader/ddr-data-reader-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ddr-data-reader-deployment
  labels:
    app: ddr-data-reader
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ddr-data-reader
  template:
    metadata:
      labels:
        app: ddr-data-reader
    spec:
      containers:
        - name: ddr-data-reader
          image: yxchia98/ddr-data-reader:gke-1.2
          ports:
            - containerPort: 8080
