k8s/ddr/ddr-data-reader/ddr-data-reader-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"
  name: ddr-data-reader-ingress
  namespace: default
spec:
  rules:
    - host: datareader.gke.yxchia.me
      http:
        paths:
          - backend:
              service:
                name: ddr-data-reader-svc
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - datareader.gke.yxchia.me
      secretName: ddr-data-reader-cert
